test/trivial/bharshbarg/paramForOverIter.good
paramForOverIter.chpl:7: error: iterators for param-for-loops must be bounded literal ranges
